PageHeading Overflow solved

--- a/src/components/PageHeading/PageHeading.scss
+++ b/src/components/PageHeading/PageHeading.scss
@@ -3,8 +3,7 @@
 .PageHeading {
 
     background-color: $primary-color;
-    padding: 1rem 0;
-    margin-top: -2rem;
+    padding: 1.7rem 0;
     position: relative;
 
     &::before {
